force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/PJN_Product_Quality_Complaint__c.object-meta.xml
<CustomObject>
    <description>Stores product quality complaints.</description>
    <label>Product Quality Complaint</label>
    <nameField>
        <displayFormat>PQC-{000000}</displayFormat>
        <label>PQC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Quality Complaints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>