force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>PJN_Address_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>