force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interaction from which this Product Quality Complaint arose.</description>
    <label>Interaction</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product Quality Complaints</relationshipLabel>
    <relationshipName>PJN_Product_Quality_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>