force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Complainant_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Complainant_Type__c</fullName>
    <label>Complainant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Non-HCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>