force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Complaint__c.field-meta.xml
<CustomField>
    <fullName>PJN_Complaint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Complaint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>