force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Consent_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>PJN_Consent_to_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to Contact?</label>
    <type>Checkbox</type>
</CustomField>