force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Country__c.field-meta.xml
<CustomField>
    <fullName>PJN_Country__c</fullName>
    <description>Country of the reported PQC</description>
    <inlineHelpText>Country of the reported PQC.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HealthCloudGA__Countries</valueSetName>
    </valueSet>
</CustomField>