force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Date_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_of_Complaint__c</fullName>
    <description>The date that the company first became aware of the complaint.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the company first became aware of the complaint.</inlineHelpText>
    <label>Date of Complaint</label>
    <type>Date</type>
</CustomField>