force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Time_Closed__c</fullName>
    <description>The date and time that the PQC was closed in the system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>