force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Time_Opened__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date/time that the PQC record was opened.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time that the PQC record was opened.</inlineHelpText>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>