force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Date_Time_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PJN_Date_Time_Submitted__c</fullName>
    <description>Tracks the Date &amp; Time the PQC was submitted</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tracks the Date &amp; Time the PQC was submitted</inlineHelpText>
    <label>Date/Time Submitted</label>
    <type>DateTime</type>
</CustomField>