force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Display_Name__c</fullName>
    <description>Displayed in Tab</description>
    <formula>Name &amp;&quot; - &quot;&amp; IF(!ISBLANK(PJN_Product__r.Name),PJN_Product__r.Name,&quot;&quot;) &amp;&quot; - &quot;&amp; TEXT(PJN_Date_of_Complaint__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>