force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Due_Date_Warning__c.field-meta.xml
<CustomField>
    <fullName>PJN_Due_Date_Warning__c</fullName>
    <description>Hidden field on the layout used as a formula helper to provide the time when the flag shall be displayed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date Warning</label>
    <type>DateTime</type>
</CustomField>