force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>