force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>