force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Fax__c.field-meta.xml
<CustomField>
    <fullName>PJN_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>