force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Closed__c</fullName>
    <description>Indicates if the Product Quality Complaint is Closed</description>
    <formula>TEXT( PJN_Status__c ) == &apos;Closed&apos; || TEXT( PJN_Status__c ) == &apos;Cancelled&apos;</formula>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>