force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Escalated__c</fullName>
    <formula>IF(ISPICKVAL(PJN_Status__c, &quot;Closed&quot;)||ISPICKVAL(PJN_Status__c, &quot;Cancelled&quot;),
FALSE,
IF( OwnerId != PJN_Case__r.OwnerId ,
TRUE,
FALSE
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escalated</label>
    <type>Checkbox</type>
</CustomField>