force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>