force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Locked__c.field-meta.xml
<CustomField>
    <fullName>PJN_Locked__c</fullName>
    <formula>TEXT( PJN_Status__c ) == &apos;Closed&apos; || TEXT( PJN_Status__c ) == &apos;Cancelled&apos; || PJN_Legal_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>