force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Lot_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lot Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>