force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Middle_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>