force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Missed_SLA__c.field-meta.xml
<CustomField>
    <fullName>PJN_Missed_SLA__c</fullName>
    <description>Used for Reporting to determine PQCs that missed SLA</description>
    <formula>IF(PJN_Date_Time_Closed__c &gt; PJN_Due_Date__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed SLA</label>
    <type>Checkbox</type>
</CustomField>