force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Owner_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Owner_Name_Formula__c</fullName>
    <formula>IF(BEGINS(OwnerId, &quot;00G&quot;), Owner:Queue.Name,
IF(!ISBLANK(Owner:User.FirstName),Owner:User.FirstName, &quot;&quot;) &amp;
IF(!ISBLANK(Owner:User.MiddleName), &quot; &quot; &amp; Owner:User.MiddleName, &quot;&quot;) &amp;
IF(!ISBLANK(Owner:User.LastName), &quot; &quot; &amp; Owner:User.LastName, &quot;&quot;) &amp;
IF(!ISBLANK(Owner:User.Suffix), &quot; &quot; &amp; Owner:User.Suffix, &quot;&quot;))</formula>
    <label>Owner Name Formula</label>
    <type>Text</type>
</CustomField>