force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Phone__c.field-meta.xml
<CustomField>
    <fullName>PJN_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>