force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>