force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Product__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>CareProgramProduct</referenceTo>
    <relationshipLabel>PQCs</relationshipLabel>
    <relationshipName>PJN_Product_Quality_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>