force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_QA_Summary__c.field-meta.xml
<CustomField>
    <fullName>PJN_QA_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QA Summary</label>
    <type>TextArea</type>
</CustomField>