force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Reconciliation_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reconciliation_Number__c</fullName>
    <description>External ID to the quality system that this PQC is submitted to.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External ID to the quality system that this PQC is submitted to.</inlineHelpText>
    <label>Reconciliation Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>