force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Reopen_Reason__c</fullName>
    <label>Reopen Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Reopen_Reason</valueSetName>
    </valueSet>
</CustomField>