force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Sample_Available__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sample_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Available?</label>
    <type>Checkbox</type>
</CustomField>