force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_SLA_Flag__c.field-meta.xml
<CustomField>
    <fullName>PJN_SLA_Flag__c</fullName>
    <formula>IF(Isblank( PJN_Date_Time_Submitted__c ),
	IF( ( PJN_Due_Date__c - NOW()) &lt;= 0 , IMAGE(&quot;/resource/globalassets/icons/priority_red_20x20.png&quot;, &quot;2. Past Due&quot;),
		IF( ( PJN_Due_Date_Warning__c - NOW()) &lt;= 0 ,IMAGE(&quot;/resource/globalassets/icons/priority_orange_20x20.png&quot;, &quot;1. Due in 24 hrs&quot;), &quot;&quot;)
	),
	IF( ( PJN_Due_Date__c - PJN_Date_Time_Submitted__c) &lt;= 0 , IMAGE(&quot;/resource/globalassets/icons/priority_red_20x20.png&quot;, &quot;2. Past Due&quot;),
		IF( ( PJN_Due_Date__c - PJN_Date_Time_Submitted__c) &lt;= 1 ,IMAGE(&quot;/resource/globalassets/icons/priority_orange_20x20.png&quot;, &quot;1. Due in 24 hrs&quot;),&quot;&quot;)
	)
)</formula>
    <label>SLA Flag</label>
    <type>Text</type>
</CustomField>