force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_State</valueSetName>
    </valueSet>
</CustomField>