force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Strength__c.field-meta.xml
<CustomField>
    <fullName>PJN_Strength__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Strength</label>
    <length>10</length>
    <type>Text</type>
</CustomField>