force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Suffix__c.field-meta.xml
<CustomField>
    <fullName>PJN_Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>