force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/fields/PJN_Transfer_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Transfer_Reason__c</fullName>
    <description>Captures the reason the Product Quality Complaint was transferred/escalated.</description>
    <inlineHelpText>Captures the reason the Product Quality Complaint was transferred/escalated.</inlineHelpText>
    <label>Transfer Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Escalation_Transfer_Reason</valueSetName>
    </valueSet>
</CustomField>