force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/recordTypes/PJN_Product_Quality_Complaint.recordType-meta.xml
<RecordType>
    <fullName>PJN_Product_Quality_Complaint</fullName>
    <active>true</active>
    <label>Product Quality Complaint</label>
</RecordType>