force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/recordTypes/PJN_Product_Quality_Complaint_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_Product_Quality_Complaint_Closed</fullName>
    <active>true</active>
    <label>Product Quality Complaint - Closed</label>
</RecordType>