force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Cannot_Edit_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Cannot_Edit_When_Closed</fullName>
    <active>true</active>
    <description>Can only reopen the record when closed.</description>
    <errorConditionFormula>PJN_Is_Closed__c &amp;&amp; PRIORVALUE(PJN_Is_Closed__c) &amp;&amp; !ISCHANGED( PJN_QA_Summary__c )</errorConditionFormula>
    <errorMessage>Cannot edit closed Product Quality Complaint records</errorMessage>
</ValidationRule>