force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Prevent_Editing_Reopen_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Prevent_Editing_Reopen_Reason</fullName>
    <active>true</active>
    <description>Prevents users from editing Reopen Reason unless reopening the PQC in the same edit.</description>
    <errorConditionFormula>ISCHANGED(PJN_Reopen_Reason__c) &amp;&amp;
NOT(TEXT(PRIORVALUE(PJN_Status__c))=&quot;Closed&quot;
||TEXT(PRIORVALUE(PJN_Status__c))=&quot;Cancelled&quot; )</errorConditionFormula>
    <errorDisplayField>PJN_Reopen_Reason__c</errorDisplayField>
    <errorMessage>Reopen Reason can only be assigned when reopening a PQC.</errorMessage>
</ValidationRule>