force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Require_and_Lock_Interaction.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_and_Lock_Interaction</fullName>
    <active>true</active>
    <description>The case id cannot be blank or changed on a PQC.</description>
    <errorConditionFormula>ISCHANGED( PJN_Case__c ) || ISBLANK(PJN_Case__c)</errorConditionFormula>
    <errorDisplayField>PJN_Case__c</errorDisplayField>
    <errorMessage>All PQCs must be tied to an Interaction and the Interaction cannot be changed</errorMessage>
</ValidationRule>