force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Require_Reopen_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_Reopen_Reason</fullName>
    <active>true</active>
    <description>Requires that the user specifies Reopen Reason when PQC is &apos;reopened&apos; (Status changed from Closed to Open).</description>
    <errorConditionFormula>AND(
TEXT(PRIORVALUE(PJN_Status__c))=&quot;Closed&quot;||TEXT(PRIORVALUE(PJN_Status__c))=&quot;Cancelled&quot;,
NOT(ISPICKVAL(PJN_Status__c, &quot;Cancelled&quot;)||ISPICKVAL(PJN_Status__c, &quot;Closed&quot;)),
ISPICKVAL(PJN_Reopen_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>PJN_Reopen_Reason__c</errorDisplayField>
    <errorMessage>Please provide Reopen Reason</errorMessage>
</ValidationRule>