force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Require_to_Close_Reconciliation.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_to_Close_Reconciliation</fullName>
    <active>true</active>
    <description>The PQC Reconciliation number is required to close the PQC</description>
    <errorConditionFormula>AND(
ISPICKVAL(PJN_Status__c, &quot;Closed&quot;),
ISBLANK(  PJN_Reconciliation_Number__c  )
)</errorConditionFormula>
    <errorDisplayField>PJN_Reconciliation_Number__c</errorDisplayField>
    <errorMessage>The PQC Reconciliation number is required to close the PQC</errorMessage>
</ValidationRule>