force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Require_to_Submit_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_to_Submit_Complaint</fullName>
    <active>true</active>
    <description>Must have a complaint to Submit the PQC</description>
    <errorConditionFormula>AND(
!ISBLANK(  PJN_Date_Time_Submitted__c  ),
ISBLANK(  PJN_Complaint__c  )
)</errorConditionFormula>
    <errorDisplayField>PJN_Complaint__c</errorDisplayField>
    <errorMessage>Must document the complaint before submitting</errorMessage>
</ValidationRule>