force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Require_to_Submit_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Require_to_Submit_Product</fullName>
    <active>true</active>
    <description>A product is required to submit a PQC.</description>
    <errorConditionFormula>AND(
!ISBLANK( PJN_Date_Time_Submitted__c ),
ISBLANK( PJN_Product__c )
)</errorConditionFormula>
    <errorDisplayField>PJN_Product__c</errorDisplayField>
    <errorMessage>You must specify a Product to submit the PQC.</errorMessage>
</ValidationRule>