force-app/main/default/src/objects/PJN_Product_Quality_Complaint__c/validationRules/PJN_Valid_Date_of_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>PJN_Valid_Date_of_Complaint</fullName>
    <active>true</active>
    <description>Date of Complaint Cannot be in the Future</description>
    <errorConditionFormula>PJN_Date_of_Complaint__c &gt; Today()</errorConditionFormula>
    <errorDisplayField>PJN_Date_of_Complaint__c</errorDisplayField>
    <errorMessage>Cannot set the Date of Complaint in the future</errorMessage>
</ValidationRule>